GH-702 Update Eda CIM mapping to ACTIVE_ENERGY